--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -13,6 +13,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>commons</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>jpa-data-model</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
