--- a/jpa-data-model/pom.xml
+++ b/jpa-data-model/pom.xml
@@ -9,28 +9,16 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>boot</artifactId>
+    <artifactId>jpa-data-model</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.qsspy</groupId>
-            <artifactId>auth-service</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qsspy</groupId>
-            <artifactId>bands</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qsspy</groupId>
-            <artifactId>jpa-data-model</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
