--- a/boot/src/main/resources/application.yml
+++ b/boot/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update # TODO remove in future
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   h2:
     console:
       enabled: true
