--- a/finances/pom.xml
+++ b/finances/pom.xml
@@ -9,12 +9,20 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>boot</artifactId>
+    <artifactId>finances</artifactId>
 
     <dependencies>
         <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>commons</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -22,19 +30,11 @@
         </dependency>
         <dependency>
             <groupId>com.qsspy</groupId>
-            <artifactId>auth-service</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qsspy</groupId>
-            <artifactId>finances</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qsspy</groupId>
-            <artifactId>bands</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.qsspy</groupId>
             <artifactId>jpa-data-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>auth-service</artifactId>
         </dependency>
     </dependencies>
 
