Refactored finance domain entity to be integrated with JPA

--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -40,6 +40,10 @@
             <groupId>com.qsspy</groupId>
             <artifactId>jpa-data-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>domain-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
