--- a/calendars/pom.xml
+++ b/calendars/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>commons</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.qsspy</groupId>
+            <artifactId>domain-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
