--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,14 @@
     </modules>
 
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<java.version>17</java.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<java.version>21</java.version>
 
 		<jwt.version>0.11.5</jwt.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+
+		<lombok.version>1.18.30</lombok.version>
 	</properties>
 
 	<dependencyManagement>
@@ -79,6 +81,11 @@
 				<groupId>io.jsonwebtoken</groupId>
 				<artifactId>jjwt-gson</artifactId>
 				<version>${jwt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
