--- a/boot/src/main/resources/application-local.yml
+++ b/boot/src/main/resources/application-local.yml
@@ -15,3 +15,10 @@ spring:
   h2:
     console:
       enabled: true
+  cloud:
+    stream:
+      kafka:
+        binder:
+          auto-create-topics: true
+          min-partition-count: 3
+          brokers: localhost:9091,localhost:9092,localhost:9093
