--- a/calendars/pom.xml
+++ b/calendars/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.qsspy</groupId>
             <artifactId>commons</artifactId>
         </dependency>
