Fixed db connection string

--- a/boot/src/main/resources/application.yml
+++ b/boot/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/bm-monolith-db
+    url: jdbc:postgresql://postgres:5432/bm-monolith-db
     username: sa
     password: password
     driverClassName: org.postgresql.Driver
